--- a/python3.7/Dockerfile
+++ b/python3.7/Dockerfile
@@ -1,7 +1,12 @@
 FROM python:3.7-alpine3.11
 
-RUN apk add --no-cache bash make gcc openssl-dev libffi-dev musl-dev
+RUN apk add --no-cache bash curl make gcc openssl-dev libffi-dev musl-dev
 RUN pip install --upgrade pip setuptools
 RUN pip install --upgrade pipenv
+
+# setup poetry
+ENV POETRY_VERSION "1.0.10"
+RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+ENV PATH "$PATH:root/.poetry/bin"
 
 CMD ["/bin/bash"]
