--- a/python3.7/Dockerfile
+++ b/python3.7/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7-alpine3.11
 
-RUN apk add --no-cache bash curl make gcc openssl-dev libffi-dev musl-dev
+RUN apk add --no-cache bash curl make gcc git openssl-dev libffi-dev musl-dev
 RUN pip install --upgrade pip setuptools
 RUN pip install --upgrade pipenv
 
