add openssh-client to enable `git clone` using ssh

--- a/python3.8/Dockerfile
+++ b/python3.8/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8-alpine3.11
 
-RUN apk add --no-cache bash curl make gcc git openssl-dev libffi-dev musl-dev npm
+RUN apk add --no-cache bash curl make gcc git openssh-client openssl-dev libffi-dev musl-dev npm
 RUN pip install --upgrade pip setuptools
 RUN pip install --upgrade pipenv
 
